src/styles/monitor.scss
@import '_variables.scss';
@import 'panelStyles/mobile.scss';
@import 'panelStyles/phablet.scss';
@import 'panelStyles/desktop.scss';
@import 'panelStyles/desktopHD.scss';

app-monitor {
  display: block;
  line-height: 1em;

  .empty-monitor {
    height: 95%;
    width: 100%;
    position: absolute;

    span {
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
      font-size: 1.5em;
    }
  }

  .container {
    display: grid;
    // margin-bottom: 2em; WHY WAS THIS HERE
    grid-gap: 1em;
    grid-template-areas:
      'title'
      'friendly-clan'
      'friendly'
      'enemy-clan'
      'enemy';

    >p-card .ui-card {
      margin-bottom: 0;
    }

    &.fz-small {
      font-size: 0.7em;
    }

    &.fz-normal {
      font-size: 0.85em;
    }

    &.fz-big {
      font-size: 1em;
    }

    &.fz-huge {
      font-size: 1.2em;
    }
  }


  #monitor-title {
    grid-area: title;
  }

  #monitor-friendly-clan {
    grid-area: friendly-clan;
  }

  #monitor-enemy-clan {
    grid-area: enemy-clan;
  }

  #monitor-friendly {
    grid-area: friendly;
  }

  #monitor-enemy {
    grid-area: enemy;
  }

  p-card.no-padding .ui-card-body {
    padding: 0;
  }
}

// app-player {
//   // display: block;
//   background: $secondaryDarkColor;

//   &.high-contrast-mode {
//     background: #FFF;
//     color: $primaryTextColor;

//     app-player.me {
//       border-color: $primaryTextColor;
//     }
//   }


// }

.high-contrast-mode {
  .ui-card {
    background: #FFF;
  }


  app-player {
    color: $primaryTextColor;

    &:hover {
      background: transparentize($secondaryColor, 0.75) !important;
    }
  }
}

hr.player-seperator {
  background: $secondaryColor;
  height: 1px;
  margin: 0 1em;
  padding: 0;
  border: 0;
}

app-player {
  box-sizing: border-box;
  display: block;
  padding: 0 1em;
  cursor: pointer;
  transition: all .3s ease-in-out;
  width: 100%;
  border-width: 2px;
  border-style: solid;
  // border: 1px solid #FFF;

  &:not(.me):not(.border-mode) {
    border-color: transparent !important;
  }

  &.border-mode {
    padding: 2px 1em 2px .3em;
    border-width: 0 0 0 .7em;
    border-style: solid;
  }

  &:hover {
    background: transparentize($secondaryColor, 0.5) !important;
  }

  .info-wrapper {
    display: grid;
    grid-gap: .5em;
    padding: calc(0.75em - 2px) 0;
    width: 100%;
    overflow: hidden;

    &.force-white>div:not(#name)  strong {
      color: $primaryTextColor !important;
    }

    &.hidden,
    &.bot {

      #ovr-winrate,
      #ovr-battles,
      #karma,
      #winrate,
      #battles,
      #wins,
      #pr,
      #avg-damage,
      #avg-frags,
      #avg-xp {
        display: none !important;
      }

      #message {
        display: block;
      }
    }

    &.no-battles {

      #winrate,
      #battles,
      #pr,
      #wins,
      #avg-damage,
      #avg-frags,
      #avg-xp {
        display: none !important;
      }

      #message {
        display: block;
      }
    }

    &.legacy {
      #ovr-winrate,
      #ovr-battles,
      #karma,
      #pr {
        display: none !important;
      }
    }

    &.compact {
      #wins,
      #avg-xp,
      #avg-frags {
        display: none !important;
      }
    }

    @include mobile;

    #message {
      grid-area: message;
      display: none;
      margin: auto;
    }

    #name {
      grid-area: name;
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
    }

    #ovr-winrate {
      grid-area: ovr-winrate;
    }

    #ovr-battles {
      grid-area: ovr-battles;
    }

    #karma {
      grid-area: karma;
    }

    #ship {
      grid-area: ship;
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
    }

    #winrate {
      grid-area: winrate;
    }

    #battles {
      grid-area: battles;
    }

    #wins {
      grid-area: wins;
    }

    #pr {
      grid-area: pr;
    }

    #avg-damage {
      grid-area: avg-damage;
    }

    #avg-frags {
      grid-area: avg-frags;
    }

    #avg-xp {
      grid-area: avg-xp;
    }
  }

  &.last {
    .info-wrapper {
      border-bottom: 0;
    }
  }


}

app-team {
  display: block;
  cursor: pointer;
  padding: 1em;

  &:hover {
    background: transparentize($secondaryColor, 0.5);
  }

  .team-overall-wrapper {
    .inner {
      display: inline-block;

      >* {
        &:first-child {
          display: block;
        }

        margin-right: 1em;
      }

      margin-right: 2em;
    }
  }
}

/* Larger than mobile */
@media (min-width: 400px) {}

/* Larger than phablet */
@media (min-width: 550px) {
  app-player {
    .info-wrapper {
      @include phablet;
    }
  }
}

/* Larger than tablet */
@media (min-width: 750px) {
  app-monitor {
    .container {

      grid-template-columns: 1fr 1fr 1fr 1fr;
      grid-template-rows: auto;
      grid-template-areas: 'friendly-clan friendly-clan enemy-clan enemy-clan'
        'friendly friendly enemy enemy';
    }
  }

  app-player {
    .info-wrapper {
      @include mobile;
    }
  }
}

/* Larger than desktop */
@media (min-width: 1000px) {}

/* Larger than Desktop HD */
@media (min-width: 1200px) {
  app-monitor {
    .container {
      grid-template-rows: auto auto;
      grid-template-areas:
        'friendly-clan friendly-clan enemy-clan enemy-clan'
        'friendly friendly enemy enemy';
    }
  }

  app-player {
    .info-wrapper {
      @include desktop;
    }
  }
}

@media (min-width: 1440px) {
  app-player {
    .info-wrapper {
      @include desktopHD;
    }
  }
}

